[gd_scene load_steps=4 format=2]

[ext_resource path="res://planets/art/sea_world.png" type="Texture" id=1]
[ext_resource path="res://planets/Planet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="Planet" type="Area2D" groups=["planets"]]
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Jobs" type="Node" parent="."]

[node name="PlanetLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = 35.0
margin_right = 53.0
margin_bottom = 49.0
align = 1
valign = 1

[connection signal="body_entered" from="." to="." method="_on_Planet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Planet_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Planet_input_event"]
